Try to fix alignment of footer text

--- a/css/main.css
+++ b/css/main.css
@@ -402,8 +402,8 @@ html {
     .form-button{
         padding-top:15px;
     }
-    .footer{
-        padding-top:20px;
+    .footer-text{
+        padding-top:10px;
     }
 }
 
